2006-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.
	(tramp-completion-mode): Remove clause (not
	tramp-unified-filenames), because the function is called in other
	context too, where this check results in wrong results in the
	XEmacs case on Windows.
	(tramp-touch): UTC handling is not possible for XEmacs.

2006-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.54 released.

	* tramp.el (tramp-convert-file-attributes): Call `eql' instead of
	`=', because `tramp-get-remote-gid' might not always return an
	integer when expected.

2006-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Preserve current-buffer.

2006-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-unload-tramp): Provide a doc string.

2006-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>  (tiny change)

	* tramp.el (tramp-touch): Use UTC to express time.

2006-05-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-file-name-handlers):
	`partial-completion-mode' is unknown to XEmacs.
	(tramp-time-diff): Don't use `floor', it might fail for large
	differences.

2006-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-file-name-handlers): Enable Tramp
	completion also when ido is loaded.

2006-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-file-name-handler-alist)
	(tramp-run-real-handler, tramp-completion-run-real-handler)
	(tramp-completion-handle-file-name-all-completions)
	(tramp-completion-handle-file-name-completion): Autoload them.
	(tramp-handle-file-name-directory): Return the real directory
	name.  Returning "/" only doesn't need to be necessary any longer.
	(tramp-file-name-handler): Make special attention when in hostname
	completion mode.
	(tramp-register-file-name-handlers): That's a defsubst now.  Code
	from `tramp-repair-jka-compr' moved here.  Register